--- a/style.css
+++ b/style.css
@@ -34,6 +34,36 @@ form input {
     pointer-events: none;
 }
 
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+
+}
+
 button {
+    background-color: rgb(248, 248, 245);
+    flex: 0 0 22%;
+    margin: 5px 0px;
+    border: 1px solid #000;
     width: 60px;
+    height: 52px;
+    font-size: 22px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-yellow {
+    background-color: rgb(245, 146, 62);
+    color: #fff;
+}
+
+.btn-equal {
+    background-color: green;
+}
+
+.btn-clear {
+    background-color: red;
 }
